--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,11 +24,17 @@
 .title {
   font-weight: bold;
   font-size: 24px;
+  padding-top: 5px;
   margin-bottom: 10px;
 }
 
+.flex{
+  display: flex;
+  justify-content: space-between;
+}
+
 .border {
-  width: 80%;
+  width: 75%;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -49,7 +55,6 @@
   cursor: pointer;
   transition: 0.4s;
   outline: none;
-  margin-left: 40px;
 }
 
 
@@ -90,23 +95,15 @@
   appearance: none;
   font-size: 14px;
   outline: none;
-  width: 90%;
+  width: 100%
 }
 
 
 table{
-  table-layout: fixed;
   width: 100%;
   text-align: center;
 }
 
-.task_date{
- width: 50%;
-}
-
-.createday{
-  width: 30%;
-}
 
 .top{
   margin-bottom: 30px;
@@ -124,4 +121,53 @@ table{
   cursor: pointer;
   transition: 0.4s;
   outline: none;
+}
+.select-tag{
+      
+      padding: 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 14px;
+        outline: none;
+}
+
+.btn_search{
+      display: inline-block;
+        border: 2px solid #cdf119;
+        color: #cdf119;
+        text-decoration: none;
+        margin-bottom: 10px;
+          text-align: left;
+            font-size: 12px;
+            background-color: #fff;
+            font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.4s;
+            outline: none;
+}
+
+.btn_back{
+    border: 2px solid #6d7170;
+      color: #6d7170;
+      background-color: #fff;
+      text-decoration: none;
+          text-align: left;
+            font-size: 12px;
+            background-color: #fff;
+            font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.4s;
+            outline: none;
+}
+
+.login {
+  padding-top: 11px;
+}
+
+.head{
+  display: flex;
 }
